<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/padding_32"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/closeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/share_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeView" />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/share_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <LinearLayout
        android:id="@+id/shareButton"
        android:layout_width="@dimen/layout_width_275"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/bg_purple_btn"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/link_included"
            android:textColor="@color/light_purple_2"
            android:textSize="@dimen/text_size_11" />

    </LinearLayout>

    <TextView
        android:id="@+id/importantLabelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_16"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/important_label"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareButton" />

    <TextView
        android:id="@+id/importantDescrView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/important_description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importantLabelView" />


</androidx.constraintlayout.widget.ConstraintLayout>