<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_32">

    <ImageView
        android:id="@+id/startView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descrView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/rate_us_description"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startView" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/PinkButton"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:text="@string/rate_us"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrView" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_thanks"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/text_size_16"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>