<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <com.digicode.dodobattery.view.customView.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:buttonIcon="@drawable/ic_arrow_back"
        app:buttonText="@string/back"
        app:buttonTextColor="@color/white" >

    </com.digicode.dodobattery.view.customView.HeaderLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/how_to_add_title2"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/descriptionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/how_to_add_description"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


                <VideoView
                    android:visibility="invisible"
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="1000dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp" />
                
                
                <View
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>